CW_rugby/rugby_u43534sr/fback.txt
Submission ran but did not finish its execution due to the errors below. 
This does not mean the program did not execute however, it may or may not have produced some files or none: 

   File "***Removed due to privacy***/rugby_u43534sr/./rugby_u43534sr.py", line 9
    ''''
        ^
SyntaxError: EOL while scanning string literal

No files were created within the results folder. (This does not mean files were not created elsewhere)
